setting up project

--- a/package.json
+++ b/package.json
@@ -4,7 +4,24 @@
   "description": "web dev base template with cascading layers and sass",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "del-cli ./public",
+    "prestart": "del-cli ./public",
+    "build:sass": "sass  --no-source-map src/sass:public/css",
+    "copy:html": "copyfiles -u 1 ./src/*.html public",
+    "copy:img": "copyfiles -u 1 ./src/img/* public",
+    "copy:js": "copyfiles -u 1 ./src/js/* public",
+    "copy:css": "copyfiles -u 1 ./src/css/* public",
+    "copy": "npm-run-all --parallel copy:*",
+    "watch:html": "onchange 'src/*.html' -- npm run copy:html",
+    "watch:js": "onchange 'src/js/*.js' -- npm run copy:js",
+    "watch:sass": "sass --embed-sources --watch src/sass:public/css",
+    "watch:css": "onchange 'src/css/*.css' -- npm run copy:css",
+    "watch": "npm-run-all --parallel watch:*",
+    "serve": "browser-sync start --server public --files public --no-ghost-mode --no-open",
+    "start": "npm-run-all copy --parallel watch serve",
+    "build": "npm-run-all copy build:*",
+    "postbuild": "postcss public/css/*.css -u autoprefixer cssnano -r --no-map",
+    "poststart": "postcss public/css/*.css -u autoprefixer"
   },
   "author": "JP Pohlmann",
   "license": "MIT",
